--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
   }
 }
