--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node --watch index.js",
     "start": "node index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook/ && npm run build && cp -r dist ../../part3/phonebook-backend",
     "deploy": "fly deploy",
@@ -15,11 +16,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.7.10"
+    "@eslint/js": "^9.32.0",
+    "@flydotio/dockerfile": "^0.7.10",
+    "@stylistic/eslint-plugin": "^5.2.3",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0"
   }
 }
