finish `4.8 blog list tests` step 1.

--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node --test",
-    "dev": "node --watch index.js"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development node --watch index.js",
+    "test": "NODE_ENV=test node --test"
   },
   "author": "mrhorst",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.1"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4"
   }
 }
