--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node --watch index.js",
-    "test": "NODE_ENV=test node --test"
+    "test": "NODE_ENV=test node --test",
+    "start:test": "cross-env NODE_ENV=test node --watch index.js"
   },
   "author": "mrhorst",
   "license": "ISC",
