--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,7 +6,7 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node --watch index.js",
     "test": "NODE_ENV=test node --test",
-    "start:test": "cross-env NODE_ENV=test node --watch index.js"
+    "start:test": "NODE_ENV=test node --watch index.js"
   },
   "author": "mrhorst",
   "license": "ISC",
