--- a/part7/bloglist-frontend-query/package.json
+++ b/part7/bloglist-frontend-query/package.json
@@ -11,6 +11,11 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
