--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -10,6 +10,9 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^5.0.0",
-    "graphql": "^16.11.0"
+    "dotenv": "^17.2.2",
+    "graphql": "^16.11.0",
+    "mongoose": "^7.8.7",
+    "mongoose-unique-validator": "^4.0.1"
   }
 }
