--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^5.0.0",
     "dotenv": "^17.2.2",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "mongoose-unique-validator": "^4.0.1"
   },
