--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@stylistic/eslint-plugin": "^5.4.0",
+    "@types/cors": "^2.8.19",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.3",
     "eslint": "^9.36.0",
@@ -22,6 +23,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
